--- a/Door01/Door01_de.html
+++ b/Door01/Door01_de.html
@@ -1,38 +1,23 @@
-<p>A loud squeaking noise escapes the hinge of this old portal into the world of Crusader… how long has this been closed?</p>
-<p>You are in a medieval fantasy setting, where you’ll follow the rules of Stronghold Crusader. We have shot a picture to give an overview of the upcoming mission, look at it above to grasp the urgency of the situation.</p>
-<p>You start with your Lord and an army, that was provided to you from your friend Emir (blue) in the left bottom corner. You will spawn with your screen above your demolished castle on the right-hand side, surrounded by your enemies: The <b><font color = "purple">Snake </font></b>, the <b><font color = "green">Rat</font></b> and <b><font color = "lightblue">Saladin</font></b>.</p>
-<p>Sultan (yellow) is protecting the northern gate of Saladin’s castle, while Sheriff engrosses the top part of the map, pressuring Emir in an uphill battle.</p>
-<p>This is the time to plan your strategy ahead. Your initial forces include a few engineers to siege an enemy castle, but you will not have access to shields.</p>
-<p></p>
-<p>As promised, there are some hints with every map. I advise you to only peek, in cases of severe struggle:</p>
+<p style="text-align: left;">A loud squeaking noise escapes the hinge of this old portal into the world of Crusader&hellip; <em>how long has this been closed?</em></p>
+<p style="text-align: left;">You are in a medieval fantasy setting, where you&rsquo;ll follow the rules of Stronghold Crusader. We have shot a picture to give an overview of the upcoming mission, look at it above to grasp the urgency of the situation.</p>
+<p style="text-align: left;"><strong>You start with your Lord and an army</strong>, that was provided to you from your friend <strong><span style="color: #0000ff;">Emir</span></strong>&nbsp;in the left bottom corner. <strong>You will spawn with your screen above your demolished castle</strong> on the right-hand side, surrounded by your enemies: The <strong><span style="color: purple;">Snake</span></strong>, the <strong><span style="color: green;">Rat</span></strong> and <span style="color: #00ffff;"><strong>Saladin</strong></span>.</p>
+<p style="text-align: left;"><span style="color: #ffff00;"><strong>Sultan</strong> </span>is protecting the northern gate of Saladin&rsquo;s castle, while <span style="color: #000000;"><strong>Sheriff</strong> </span>engrosses the top part of the map, pressuring Emir in an uphill battle.</p>
+<p style="text-align: left;">This is the time to <strong>plan your strategy ahead</strong>. Your initial forces include a few engineers to siege an enemy castle, but you will not have access to shields.</p>
+<p style="text-align: left;">As promised, there are some hints with every map. I advise you to only peek, in cases of severe struggle:</p>
 <details>
-    <summary>Hint 1</summary>
-    If you need reinforcements to target a specific enemy or you are running short on supplies, Emir might be the one to ask for it.
-</details>
-<details>
-    <summary>Hint 2</summary>
-    For a small population, the maximum positive fear factor fighting bonus is already achieved by building 5 good things.
-</details>
-<details>
-    <summary>Hint 3</summary>
-    Engineers don’t have to die with their manned siege engine and can be reused.
-</details>
-<details>
-    <summary>Hint 4</summary>
-    Fire throwers can cause hefty damage. I’d say either avoid staying on low ground in their range or kill them before marching at a castle.
-</details>
-<details>
-    <summary>Hint 5</summary>
-    Taking control over enemy defense structures with your own troops by climbing their staircases will give you an advantage while taking it from them at the same time.
-</details>
-<details>
-    <summary>Hint 6</summary>
-    Mangonels and trebuchets are great tools for sieging big castles. Trebuchets can outrange ballista towers by target firing with attack command in front of them.
-</details>
-<details>
-    <summary>Hint 7</summary>
-    Killing Lords will increase your army limit to take on stronger enemies.
-</details>
-
-Its time to head into battle. Have fun and good luck.
-by Krarilotus
+<summary>Hint 1</summary>
+If you need reinforcements to target a specific enemy or you are running short on supplies, Emir might be the one to ask for it.</details><details>
+<summary>Hint 2</summary>
+For a small population, the maximum positive fear factor fighting bonus is already achieved by building 5 good things.</details><details>
+<summary>Hint 3</summary>
+Engineers don&rsquo;t have to die with their manned siege engine and can be reused.</details><details>
+<summary>Hint 4</summary>
+Fire throwers can cause hefty damage. I&rsquo;d say either avoid staying on low ground in their range or kill them before marching at a castle.</details><details>
+<summary>Hint 5</summary>
+Taking control over enemy defense structures with your own troops by climbing their staircases will give you an advantage while taking it from them at the same time.</details><details>
+<summary>Hint 6</summary>
+Mangonels and trebuchets are great tools for sieging big castles. Trebuchets can outrange ballista towers by target firing with attack command in front of them.</details><details>
+<summary>Hint 7</summary>
+Killing Lords will increase your army limit to take on stronger enemies.</details>
+<p><strong>Its time to head into battle. Have fun and good luck.</strong></p>
+<p>by Krarilotus</p>
