--- a/Door01/Door01_de.html
+++ b/Door01/Door01_de.html
@@ -1,23 +1,23 @@
-<p style="text-align: left;">A loud squeaking noise escapes the hinge of this old portal into the world of Crusader&hellip; <em>how long has this been closed?</em></p>
-<p style="text-align: left;">You are in a medieval fantasy setting, where you&rsquo;ll follow the rules of Stronghold Crusader. We have shot a picture to give an overview of the upcoming mission, look at it above to grasp the urgency of the situation.</p>
-<p style="text-align: left;"><strong>You start with your Lord and an army</strong>, that was provided to you from your friend <strong><span style="color: #0000ff;">Emir</span></strong>&nbsp;in the left bottom corner. <strong>You will spawn with your screen above your demolished castle</strong> on the right-hand side, surrounded by your enemies: The <strong><span style="color: purple;">Snake</span></strong>, the <strong><span style="color: green;">Rat</span></strong> and <span style="color: #00ffff;"><strong>Saladin</strong></span>.</p>
-<p style="text-align: left;"><span style="color: #ffff00;"><strong>Sultan</strong> </span>is protecting the northern gate of Saladin&rsquo;s castle, while <span style="color: #000000;"><strong>Sheriff</strong> </span>engrosses the top part of the map, pressuring Emir in an uphill battle.</p>
-<p style="text-align: left;">This is the time to <strong>plan your strategy ahead</strong>. Your initial forces include a few engineers to siege an enemy castle, but you will not have access to shields.</p>
-<p style="text-align: left;">As promised, there are some hints with every map. I advise you to only peek, in cases of severe struggle:</p>
+<p style="text-align: left;">Ein lautes St&ouml;hnen entfleucht dem Scharnier des alten Portals in die Welt der Kreuzfahrer&hellip; <em>wie lange hatte sie schon geschlummert?</em></p>
+<p style="text-align: left;">Du findest dich in einer mittelalterlichen Fantasiewelt wieder, in denen du dich den Regeln von Stronghold Crusader unterwirfst. Du wirfst einen Blick auf die &Uuml;bersichtskarte (oben) um dir einen Eindruck &uuml;ber die Dringlichkeit der Situation zu machen.</p>
+<p style="text-align: left;"><strong>Du startest mit deinem Lord und einer Amree,</strong> in der linken unteren Ecke, die dir von deinem Freund <strong><span style="color: #0000ff;">Emir</span></strong> zur Verf&uuml;gung gestellt wurde. <strong>Deine Startansicht fokussiert deine Burg, </strong>oder eher dem, was die Schlange nach dem Schleifen deines Bergfriedes davon &uuml;brig lies... zu deiner Rechten bist du von Feinden umzingelt. Die <strong><span style="color: purple;">Schlange</span></strong>, die <span style="color: #008000;"><strong>Ratte </strong></span>und <span style="color: #00ffff;"><strong>Saladin</strong></span>&nbsp;werfen den Schatten ihrer Burgen auf euch.</p>
+<p style="text-align: left;"><span style="color: #ffff00;"><strong>Sultan</strong> </span>verteidigt das n&ouml;rdliche Tor von Saladins Burg, w&auml;hrend <span style="color: #000000;"><strong>Sheriff</strong> </span>die obere Karte vereinnahmt und Emir in einem Kampf bergaufw&auml;rts unter Druck setzt.</p>
+<p style="text-align: left;"><strong>Plant eure Strategie weise voraus</strong>, denn gleich geht es zur Sache! Eure Streitmacht enth&auml;lt einige Baumeister zur Belagerung einer Burg, allerdings sind diese nicht in der Lage Schilde zu bauen.</p>
+<p style="text-align: left;">Wie versprochen gibt es ein paar Hinweise zur Karte. Allerdings solltet ihr nur lunzen, wenn ihr es WIRKLICH n&ouml;tig habt, wo bleibt sonst der Spa&szlig; des Knobelns?</p>
 <details>
-<summary>Hint 1</summary>
-If you need reinforcements to target a specific enemy or you are running short on supplies, Emir might be the one to ask for it.</details><details>
+<summary>Hinweis 1</summary>
+<em>Falls du Verst&auml;rkung brauchst oder kanpp bei Kasse bist, frage doch einfach Emir, auf ihn ist Verlass!</em></details><details>
 <summary>Hint 2</summary>
-For a small population, the maximum positive fear factor fighting bonus is already achieved by building 5 good things.</details><details>
+<em>F&uuml;r eine kleine Bev&ouml;lkerung, kannst du den maximalen Kampfbonus bereits mit 5 positiven Dingen erreichen.</em></details><details>
 <summary>Hint 3</summary>
-Engineers don&rsquo;t have to die with their manned siege engine and can be reused.</details><details>
+<em>Baumeister m&uuml;ssen nicht mit ihren Belagerungsger&auml;ten untergehen und k&ouml;nnen vor deren Tod das Ger&auml;t verlassen um ein weiteres zu konstruieren.</em></details><details>
 <summary>Hint 4</summary>
-Fire throwers can cause hefty damage. I&rsquo;d say either avoid staying on low ground in their range or kill them before marching at a castle.</details><details>
+<em>Feuerwerfer t&ouml;ten in engen Gassen Nahkampfeinheiten zuverl&auml;ssig. Schaltet sie schnell aus oder bringt euch auf Mauern in Sicherheit.</em></details><details>
 <summary>Hint 5</summary>
-Taking control over enemy defense structures with your own troops by climbing their staircases will give you an advantage while taking it from them at the same time.</details><details>
+<em>Die Kontrolle &uuml;ber gegnerische Verteidigungsanlagen zu &uuml;bernehmen gibt euch selbst den Vorteil, der gleichzeitig den Gegnern abhanden kommt!</em></details><details>
 <summary>Hint 6</summary>
-Mangonels and trebuchets are great tools for sieging big castles. Trebuchets can outrange ballista towers by target firing with attack command in front of them.</details><details>
+<em>Trib&ouml;cke eignen sich gro&szlig;artig um Burgen zu belagern, sie k&ouml;nnen sogar zuverl&auml;ssig Ballisten T&uuml;rme zerm&uuml;rben ohne selbst in deren Reichweite zu sein.</em></details><details>
 <summary>Hint 7</summary>
-Killing Lords will increase your army limit to take on stronger enemies.</details>
-<p><strong>Its time to head into battle. Have fun and good luck.</strong></p>
-<p>by Krarilotus</p>
+<em>T&ouml;tet erst kleinere Gegner, sodass ihr eure m&ouml;gliche Armeegr&ouml;&szlig;e erweitert um auch die dicken Fische zu erlegen.</em></details>
+<p><strong>Es ist Zeit f&uuml;r den Kampf. Viel Gl&uuml;ck und viel Spa&szlig;!</strong></p>
+<p>von Krarilotus</p>
