--- a/scenarios/Door02/Door02_en.html
+++ b/scenarios/Door02/Door02_en.html
@@ -1,4 +1,25 @@
 <p>Behind the curtains of the second door lies and invitation to play a match against the Sheriff. You plan your strategy ahead, looking at the grand overview of this tiny land.</p>
 <p>You've established the bare minimum of an economy already. Two Sultans are towering above you on either side. A corridor through the mountains leads to the Sheriff&rsquo;s castle, which is also the only way for enemies to approach your position. If I was you, I would hurry up, as they seem ready to strike any moment now. But who am I to tell, I only created this mess. Now its your turn to clean it up! Do you have what it takes?</p>
 <p>I might have figured out some basic strategic hints which would give you an edge. I am sure you<br />won&rsquo;t need them, but just in case, here they are:</p>
-<p>Well equipped, you march into the field. For power and glory!<br />Have fun and good luck.<br />by Krarilotus</p>
+<details>
+<summary>Hint 1</summary>
+Recruiting a basic defense right away with your starting weapons will give you enough time to build up an economy later on.
+</details>
+<details>
+<summary>Hint 2</summary>
+Sealing off the corridor with a wall or a moat is very cheap.
+</details>
+<details>
+<summary>Hint 3</summary>
+The farmland has more space then you might think. After all, bread production is very lucrative.
+</details>
+<details>
+<summary>Hint 4</summary>
+Harassing your enemies&rsquo; economy will keep them at bay.
+</details>
+<details>
+<summary>Hint 5</summary>
+Your enemies units seem to suffer a weakness against crossbow bolts.
+</details>
+<p>Well equipped, you march into the field. For power and glory!
+<br />Have fun and good luck.<br />by Krarilotus</p>
