--- a/scenarios/Door03/Door03_de.html
+++ b/scenarios/Door03/Door03_de.html
@@ -1,4 +1,28 @@
 <p>Du konntest nicht widerstehen das dritte T&uuml;rchen aufzumachen... was ist das f&uuml;r ein Geruch?! Ist das etwa... unkonventionelles Kartendesign?</p>
 <p>Wenn du auf das &Uuml;bersichtsbild zur Karte klickst, kannst du es etwas n&auml;her betrachten. Etwas verhindert die Nutzung deiner Produktionsst&auml;tten. Soll das ein Witz sein? Nein! Sie wurden dir genommen! Die einzige M&ouml;glichkeit sie zur&uuml;ck zu erhalten ist es, eure Gegner einen nach dem anderen auszuschalten. Aber falls du zu lange wartest, k&ouml;nnten diese eure unzureichenden M&ouml;glichkeiten eine Armee zu rekrutieren nutzen und euch &uuml;berw&auml;ltigen. Die fehlenden Waffen sind das eine Problem, doch k&ouml;nnt ihr auch keine S&ouml;ldner anheuern und eure Baumeister sind ebenfalls mit euren Handwerkern gefangen genommen worden.</p>
 <p>Nat&uuml;rlich gibt es wie immer ein paar Tipps, damit du nicht zu frustriert bist, falls ihr die Karte nicht sofort schaffst.</p>
+<details>
+<summary>Hinweis 1</summary>
+Spare dir deine Baumeister bis zum Schluss, so hast du eine besser Chance die Burg des Wolfs zu zermürben.
+</details>
+<details>
+<summary>Hinweis 2</summary>
+Die Schlange zu töten gibt dir Zugriff auf Armbrustschützen. Diese werden spätestens nötig, wenn die gepanzerten Truppen des Wolfes auf dich zumarschieren.
+</details>
+<details>
+<summary>Hinweis 3</summary>
+Pfeilmachereien anzuhäufen ist eine legitime Strategie das frühere Spiel zu dominieren. Allerdings rate ich dir sie später für eine bessere Armeekomposition zurückzubauen.
+</details>
+<details>
+<summary>Hinweis 4</summary>
+Während der Belagerung des Wolfes, empfiehlt es sich mit Rittern systematisch seine äußere Wirtschaft zu zerstören. Greift ihn danach erst an, nachdem er seine Hauptstreitmacht in eurer Verteidigung versenkt hat.
+</details>
+<details>
+<summary>Hinweis 5</summary>
+Zögert nicht zu lange mit dem Angriff auf die nächste KI, sonst werden die Angriffe der übrigen immer stärker!
+</details>
+<details>
+<summary>Hinweis 6</summary>
+Mönche können effiziente Truppen zu Beginn darstellen, jedoch sind sie im späteren Spielverlauf den anderen verfügbaren Optionen stark unterlegen. Ich empfehle die Reihenfolge der freizuschaltenden Truppentypen wie folgt: Speerkämpfer -> Armbrustschützen -> Streitkolbenkämpfer/Pikeniere -> Schwertkämpfer & Ritter.
+</details>
 <p>Einen Ratschlag gebe ich dir sofort: Deinen Spielfortschritt regelm&auml;&szlig;ig zu speichern wird dir auf Dauer Zeit ersparen. Dies ist f&uuml;r alle Karten von nun an n&uuml;tzlich, da diese nur schwieriger werden auf die eine oder andere Art.<br />Eure Handwerker brauchen dich! Also worauf wartest, viel Spa&szlig;.<br />von Krarilotus</p>
