--- a/scenarios/Door01/Door01_de.html
+++ b/scenarios/Door01/Door01_de.html
@@ -6,31 +6,18 @@
 <p>Wie versprochen gibt es ein paar Hinweise zur Karte. Allerdings solltet ihr nur lunzen, wenn ihr es WIRKLICH n&ouml;tig habt, wo bleibt sonst der Spa&szlig; des Knobelns?</p>
 <details>
 <summary>Hinweis 1</summary>
-Falls du Verstärkung brauchst oder kanpp bei Kasse bist, frage doch einfach Emir, auf ihn ist Verlass!
-</details>
-<details>
+Falls du Verst&auml;rkung brauchst oder kanpp bei Kasse bist, frage doch einfach Emir, auf ihn ist Verlass!</details><details>
 <summary>Hinweis 2</summary>
-Für eine kleine Bevölkerung, kannst du den maximalen Kampfbonus bereits mit 5 positiven Dingen erreichen.
-</details>
-<details>
+F&uuml;r eine kleine Bev&ouml;lkerung, kannst du den maximalen Kampfbonus bereits mit 5 positiven Dingen erreichen.</details><details>
 <summary>Hinweis 3</summary>
-Baumeister müssen nicht mit ihren Belagerungsgeräten untergehen und können vor deren Tod das Gerät verlassen um ein weiteres zu konstruieren.
-</details>
-<details>
+Baumeister m&uuml;ssen nicht mit ihren Belagerungsger&auml;ten untergehen und k&ouml;nnen vor deren Tod das Ger&auml;t verlassen um ein weiteres zu konstruieren.</details><details>
 <summary>Hinweis 4</summary>
-Feuerwerfer töten in engen Gassen Nahkampfeinheiten zuverlässig. Schaltet sie schnell aus oder bringt euch auf Mauern in Sicherheit.
-</details>
-<details>
+Feuerwerfer t&ouml;ten in engen Gassen Nahkampfeinheiten zuverl&auml;ssig. Schaltet sie schnell aus oder bringt euch auf Mauern in Sicherheit.</details><details>
 <summary>Hinweis 5</summary>
-Die Kontrolle über gegnerische Verteidigungsanlagen zu übernehmen gibt euch selbst den Vorteil, der gleichzeitig den Gegnern abhanden kommt!
-</details>
-<details>
+Die Kontrolle &uuml;ber gegnerische Verteidigungsanlagen zu &uuml;bernehmen gibt euch selbst den Vorteil, der gleichzeitig den Gegnern abhanden kommt!</details><details>
 <summary>Hinweis 6</summary>
-Triböcke eignen sich großartig um Burgen zu belagern, sie können sogar zuverlässig Ballisten Türme zermürben ohne selbst in deren Reichweite zu sein.
-</details>
-<details>
+Trib&ouml;cke eignen sich gro&szlig;artig um Burgen zu belagern, sie k&ouml;nnen sogar zuverl&auml;ssig Ballisten T&uuml;rme zerm&uuml;rben ohne selbst in deren Reichweite zu sein.</details><details>
 <summary>Hinweis 7</summary>
-Tötet erst kleinere Gegner, sodass ihr eure mögliche Armeegröße erweitert um auch die dicken Fische zu erlegen.
-</details>
+T&ouml;tet erst kleinere Gegner, sodass ihr eure m&ouml;gliche Armeegr&ouml;&szlig;e erweitert um auch die dicken Fische zu erlegen.</details>
 <p><strong>Es ist Zeit f&uuml;r den Kampf. Viel Gl&uuml;ck und viel Spa&szlig;!</strong></p>
 <p>von Krarilotus</p>
