--- a/scenarios/Door01/Door01_en.html
+++ b/scenarios/Door01/Door01_en.html
@@ -6,31 +6,18 @@
 <p>As promised, there are some hints with every map. I advise you to only peek, in cases of severe struggle:</p>
 <details>
 <summary>Hint 1</summary>
-If you need reinforcements to target a specific enemy or you are running short on supplies, Emir might be the one to ask for it.
-</details>
-<details>
+If you need reinforcements to target a specific enemy or you are running short on supplies, Emir might be the one to ask for it.</details><details>
 <summary>Hint 2</summary>
-For a small population, the maximum positive fear factor fighting bonus is already achieved by building 5 good things.
-</details>
-<details>
+For a small population, the maximum positive fear factor fighting bonus is already achieved by building 5 good things.</details><details>
 <summary>Hint 3</summary>
-Engineers don't have to die with their manned siege engine and can be reused.
-</details>
-<details>
+Engineers don't have to die with their manned siege engine and can be reused.</details><details>
 <summary>Hint 4</summary>
-Fire throwers can cause hefty damage. I'd say either avoid staying on low ground in their range or kill them before marching at a castle.
-</details>
-<details>
+Fire throwers can cause hefty damage. I'd say either avoid staying on low ground in their range or kill them before marching at a castle.</details><details>
 <summary>Hint 5</summary>
-Taking control over enemy defense structures with your own troops by climbing their staircases will give you an advantage while taking it from them at the same time.
-</details>
-<details>
+Taking control over enemy defense structures with your own troops by climbing their staircases will give you an advantage while taking it from them at the same time.</details><details>
 <summary>Hint 6</summary>
-Mangonels and trebuchets are great tools for sieging big castles. Trebuchets can outrange ballista towers by target firing with attack command in front of them.
-</details>
-<details>
+Mangonels and trebuchets are great tools for sieging big castles. Trebuchets can outrange ballista towers by target firing with attack command in front of them.</details><details>
 <summary>Hint 7</summary>
-Killing Lords will increase your army limit to take on stronger enemies.
-</details>
+Killing Lords will increase your army limit to take on stronger enemies.</details>
 <p><strong>Its time to head into battle. Have fun and good luck.</strong></p>
 <p>by Krarilotus</p>
