--- a/scenarios/Door02/Door02_de.html
+++ b/scenarios/Door02/Door02_de.html
@@ -3,23 +3,13 @@
 <p>Es k&ouml;nnte sein, dass ich ein paar strategische Kniffe herausgefunden habe, die dir weiterhelfen k&ouml;nnten. Ich bin mir sicher, die brauchst du nicht. Aber nur f&uuml;r den Fall der F&auml;lle, hier sind sie:</p>
 <details>
 <summary>Hinweis 1</summary>
-Rekrutiere sofort eine gute Anzahl an Startverteidigern, nur so kannst du dir auf lange sicht etwas Ruhe verschaffen um dich um deine Wirtschaft zu kümmern.
-</details>
-<details>
+Rekrutiere sofort eine gute Anzahl an Startverteidigern, nur so kannst du dir auf lange sicht etwas Ruhe verschaffen um dich um deine Wirtschaft zu k&uuml;mmern.</details><details>
 <summary>Hinweis 2</summary>
-Es ist sehr billig früh den Korridor mit Wassergraben und Wallstücken zu verschließen.
-</details>
-<details>
+Es ist sehr billig fr&uuml;h den Korridor mit Wassergraben und Wallst&uuml;cken zu verschlie&szlig;en.</details><details>
 <summary>Hinweis 3</summary>
-Das Farmland hat mehr Platz als du denkst. Immerhin ist Brotuktion sehr lukrativ!
-</details>
-<details>
+Das Farmland hat mehr Platz als du denkst. Immerhin ist Brotuktion sehr lukrativ!</details><details>
 <summary>Hinweis 4</summary>
-Die Wirtschaft deiner Gegner kannst du auch von deiner Position mit ein paar gut platzierten Türmen unter Druck setzen, so dauert die Nachrekrutierung neuer Angreifer länger.
-</details>
-<details>
+Die Wirtschaft deiner Gegner kannst du auch von deiner Position mit ein paar gut platzierten T&uuml;rmen unter Druck setzen, so dauert die Nachrekrutierung neuer Angreifer l&auml;nger.</details><details>
 <summary>Hinweis 5</summary>
-Die Einheiten eurer Gegner scheinen eine Schwäche gegen Armbrustbolzen aufzuweisen.
-</details>
-<p>Gut ger&uuml;stet marschierst du vorw&auml;rts: F&uuml;r Ruhm und Ehre!
-<br />Viel Gl&uuml;ck und Spa&szlig;<br />von Krarilotus</p>
+Die Einheiten eurer Gegner scheinen eine Schw&auml;che gegen Armbrustbolzen aufzuweisen.</details>
+<p>Gut ger&uuml;stet marschierst du vorw&auml;rts: F&uuml;r Ruhm und Ehre! <br />Viel Gl&uuml;ck und Spa&szlig;<br />von Krarilotus</p>
