--- a/scenarios/Door03/Door03_en.html
+++ b/scenarios/Door03/Door03_en.html
@@ -1,28 +1,17 @@
 <p>You couldn&rsquo;t resist to open the third door. Does that smell like the use of unconventional map<br />design?</p>
-<p>You can look closer at the image of the map, by clicking on it. Something prevents you from using your production facilities. Is this a joke? No! You got denied. The only way to regain access is by killing off your enemies one by one. But if you wait for too long, they might overpower your insufficient capabilities to craft an army. Missing weapons are not the only obstacle, you will have no mercenaries and by the way, your engineers got caught and will be unlocked alongside those craftsmen. </p>
+<p>You can look closer at the image of the map, by clicking on it. Something prevents you from using your production facilities. Is this a joke? No! You got denied. The only way to regain access is by killing off your enemies one by one. But if you wait for too long, they might overpower your insufficient capabilities to craft an army. Missing weapons are not the only obstacle, you will have no mercenaries and by the way, your engineers got caught and will be unlocked alongside those craftsmen.</p>
 <p>I know you always appreciate some help, right? I can give you some advice, as I have oftentimes run into supply issues myself.</p>
 <details>
 <summary>Hint 1</summary>
-Saving your engineers for the important sieges will give certainty for success.
-</details>
-<details>
+Saving your engineers for the important sieges will give certainty for success.</details><details>
 <summary>Hint 2</summary>
-Killing the snake will give you access to crossbows, which will greatly improve your defenses.
-</details>
-<details>
+Killing the snake will give you access to crossbows, which will greatly improve your defenses.</details><details>
 <summary>Hint 3</summary>
-Amassing fletchers at the start might be a good idea, although scaling them back will give you a better army composition later on.
-</details>
-<details>
+Amassing fletchers at the start might be a good idea, although scaling them back will give you a better army composition later on.</details><details>
 <summary>Hint 4</summary>
-When sieging the Wolf, slipping knights by his defenses to destroy his external economy and striking only after he has blown a full army at your walls, might eventually lead to his defeat.
-</details>
-<details>
+When sieging the Wolf, slipping knights by his defenses to destroy his external economy and striking only after he has blown a full army at your walls, might eventually lead to his defeat.</details><details>
 <summary>Hint 5</summary>
-The longer you need to upgrade your technologies, the harder the enemy attacks become.
-</details>
-<details>
+The longer you need to upgrade your technologies, the harder the enemy attacks become.</details><details>
 <summary>Hint 6</summary>
-Monks can be efficient at the start though not very good later on. I suggest unlocking technologies in the following order: Spearmen -> Crossbowmen -> Macemen or Pikemen -> Swordsmen and Knights.
-</details>
+Monks can be efficient at the start though not very good later on. I suggest unlocking technologies in the following order: Spearmen -&gt; Crossbowmen -&gt; Macemen or Pikemen -&gt; Swordsmen and Knights.</details>
 <p>One free hint right out of the gate: Saving your game progress regularly will save you time!<br />This obviously applies to any map from here on, as they will only become more challenging in<br />different ways.<br />Your Craftsmen are waiting for you. Have fun and good luck.<br />by Krarilotus</p>
