--- a/scenarios/Door02/Door02_en.html
+++ b/scenarios/Door02/Door02_en.html
@@ -3,23 +3,13 @@
 <p>I might have figured out some basic strategic hints which would give you an edge. I am sure you<br />won&rsquo;t need them, but just in case, here they are:</p>
 <details>
 <summary>Hint 1</summary>
-Recruiting a basic defense right away with your starting weapons will give you enough time to build up an economy later on.
-</details>
-<details>
+Recruiting a basic defense right away with your starting weapons will give you enough time to build up an economy later on.</details><details>
 <summary>Hint 2</summary>
-Sealing off the corridor with a wall or a moat is very cheap.
-</details>
-<details>
+Sealing off the corridor with a wall or a moat is very cheap.</details><details>
 <summary>Hint 3</summary>
-The farmland has more space then you might think. After all, bread production is very lucrative.
-</details>
-<details>
+The farmland has more space then you might think. After all, bread production is very lucrative.</details><details>
 <summary>Hint 4</summary>
-Harassing your enemies&rsquo; economy will keep them at bay.
-</details>
-<details>
+Harassing your enemies&rsquo; economy will keep them at bay.</details><details>
 <summary>Hint 5</summary>
-Your enemies units seem to suffer a weakness against crossbow bolts.
-</details>
-<p>Well equipped, you march into the field. For power and glory!
-<br />Have fun and good luck.<br />by Krarilotus</p>
+Your enemies units seem to suffer a weakness against crossbow bolts.</details>
+<p>Well equipped, you march into the field. For power and glory! <br />Have fun and good luck.<br />by Krarilotus</p>
