--- a/scenarios/Door03/Door03_de.html
+++ b/scenarios/Door03/Door03_de.html
@@ -3,26 +3,15 @@
 <p>Nat&uuml;rlich gibt es wie immer ein paar Tipps, damit du nicht zu frustriert bist, falls ihr die Karte nicht sofort schaffst.</p>
 <details>
 <summary>Hinweis 1</summary>
-Spare dir deine Baumeister bis zum Schluss, so hast du eine besser Chance die Burg des Wolfs zu zermürben.
-</details>
-<details>
+Spare dir deine Baumeister bis zum Schluss, so hast du eine besser Chance die Burg des Wolfs zu zerm&uuml;rben.</details><details>
 <summary>Hinweis 2</summary>
-Die Schlange zu töten gibt dir Zugriff auf Armbrustschützen. Diese werden spätestens nötig, wenn die gepanzerten Truppen des Wolfes auf dich zumarschieren.
-</details>
-<details>
+Die Schlange zu t&ouml;ten gibt dir Zugriff auf Armbrustsch&uuml;tzen. Diese werden sp&auml;testens n&ouml;tig, wenn die gepanzerten Truppen des Wolfes auf dich zumarschieren.</details><details>
 <summary>Hinweis 3</summary>
-Pfeilmachereien anzuhäufen ist eine legitime Strategie das frühere Spiel zu dominieren. Allerdings rate ich dir sie später für eine bessere Armeekomposition zurückzubauen.
-</details>
-<details>
+Pfeilmachereien anzuh&auml;ufen ist eine legitime Strategie das fr&uuml;here Spiel zu dominieren. Allerdings rate ich dir sie sp&auml;ter f&uuml;r eine bessere Armeekomposition zur&uuml;ckzubauen.</details><details>
 <summary>Hinweis 4</summary>
-Während der Belagerung des Wolfes, empfiehlt es sich mit Rittern systematisch seine äußere Wirtschaft zu zerstören. Greift ihn danach erst an, nachdem er seine Hauptstreitmacht in eurer Verteidigung versenkt hat.
-</details>
-<details>
+W&auml;hrend der Belagerung des Wolfes, empfiehlt es sich mit Rittern systematisch seine &auml;u&szlig;ere Wirtschaft zu zerst&ouml;ren. Greift ihn danach erst an, nachdem er seine Hauptstreitmacht in eurer Verteidigung versenkt hat.</details><details>
 <summary>Hinweis 5</summary>
-Zögert nicht zu lange mit dem Angriff auf die nächste KI, sonst werden die Angriffe der übrigen immer stärker!
-</details>
-<details>
+Z&ouml;gert nicht zu lange mit dem Angriff auf die n&auml;chste KI, sonst werden die Angriffe der &uuml;brigen immer st&auml;rker!</details><details>
 <summary>Hinweis 6</summary>
-Mönche können effiziente Truppen zu Beginn darstellen, jedoch sind sie im späteren Spielverlauf den anderen verfügbaren Optionen stark unterlegen. Ich empfehle die Reihenfolge der freizuschaltenden Truppentypen wie folgt: Speerkämpfer -> Armbrustschützen -> Streitkolbenkämpfer/Pikeniere -> Schwertkämpfer & Ritter.
-</details>
+M&ouml;nche k&ouml;nnen effiziente Truppen zu Beginn darstellen, jedoch sind sie im sp&auml;teren Spielverlauf den anderen verf&uuml;gbaren Optionen stark unterlegen. Ich empfehle die Reihenfolge der freizuschaltenden Truppentypen wie folgt: Speerk&auml;mpfer -&gt; Armbrustsch&uuml;tzen -&gt; Streitkolbenk&auml;mpfer/Pikeniere -&gt; Schwertk&auml;mpfer &amp; Ritter.</details>
 <p>Einen Ratschlag gebe ich dir sofort: Deinen Spielfortschritt regelm&auml;&szlig;ig zu speichern wird dir auf Dauer Zeit ersparen. Dies ist f&uuml;r alle Karten von nun an n&uuml;tzlich, da diese nur schwieriger werden auf die eine oder andere Art.<br />Eure Handwerker brauchen dich! Also worauf wartest, viel Spa&szlig;.<br />von Krarilotus</p>
