--- a/scenarios/Door06/Door06-de.html
+++ b/scenarios/Door06/Door06-de.html
@@ -22,7 +22,7 @@ Auch wenn du keine Trib&ouml;cke bauen kannst, Katapulte sind vom richtigen Wink
 <summary>Hinweis 9</summary>
 Berittene Bogensch&uuml;tzen m&ouml;gen gut sein um gegnerische T&uuml;rme leer zu r&auml;umen, allerdings solltest du dich vor den Pechfallen an engen Passagen in Acht nehmen!</details><details>
 <summary>Hinweis 10</summary>
-Der Wolf wird mit einer riesigen Armee und einer gro&szlig;en Schar Ritter zum &uuml;berfallen deiner Wirtschaft ausr&uuml;cken. Um dich abzuscihern bietet es sich an einen Wall zwischen dem linken und dem rechten Bergkamm des Halbplateaus zu ziehen, dies gibt dir im Falle einer anr&uuml;ckenden Gefahr gen&uuml;gend Zeit zu reagieren.
+Der Wolf wird mit einer riesigen Armee und einer gro&szlig;en Schar Ritter zum &uuml;berfallen deiner Wirtschaft ausr&uuml;cken. Um dich abzuscihern bietet es sich an einen Wall zwischen dem linken und dem rechten Bergkamm des Halbplateaus zu ziehen, dies gibt dir im Falle einer anr&uuml;ckenden Gefahr gen&uuml;gend Zeit zu reagieren.</details>
 <p>Einige weitere Hinweise im Detail folgen, vielleicht sind sie hilfreich, vielleicht auch nicht:</p>
 <details>
 <summary>Hinweis Detail 1</summary>
