--- a/scenarios/Door06/Door06-en.html
+++ b/scenarios/Door06/Door06-en.html
@@ -22,7 +22,7 @@ When you don&rsquo;t have trebuchets, catapults can do just as well if used from
 <summary>Hint 9</summary>
 Horse archers in large numbers work well to clear enemy towers, but take care as there might be pitch traps layed out across tight spaces.</details><details>
 <summary>Hint 10</summary>
-Wolf will attack with a huge army and raid with a lot of knights. I want to suggest two solutions for defense. Either enclose your keep early, with a small castle, or build an outer wall from the left mountains to the right mountains. 2-3 square towers with ballistae and a bunch of crossbowmen should be enough to defend his attacks.
+Wolf will attack with a huge army and raid with a lot of knights. I want to suggest two solutions for defense. Either enclose your keep early, with a small castle, or build an outer wall from the left mountains to the right mountains. 2-3 square towers with ballistae and a bunch of crossbowmen should be enough to defend his attacks.</details>
 <p>Some more hints in details follow, maybe helpful, maybe not:</p>
 <details>
 <summary>Hint Detail 1</summary>
