--- a/scenarios/Door02/Door02_de.html
+++ b/scenarios/Door02/Door02_de.html
@@ -1,15 +1,15 @@
-<p>Du l&uuml;ftest den Vorhang des 2. T&uuml;rchens und dahinter kommt zum Vorschein: Eine Einladung einen Kampf auf Leben und Tod gegen der Sheriff auszufechten. Dank der &Uuml;bersichtskarte von oben, kannst du deine Strategie vorausplanen.</p>
+<p>Du l&uuml;ftest den Vorhang des 2. T&uuml;rchens und dahinter kommt zum Vorschein: Eine Einladung einen Kampf auf Leben und Tod gegen den Sheriff auszufechten. Dank der &Uuml;bersichtskarte von oben, kannst du deine Strategie vorausplanen.</p>
 <p>Eine minimale Startwirtschaft besitzt du bereits. Zwei Sultane ragen links und rechts auf den H&uuml;geln &uuml;ber dir auf. Ein Korridor durch die Berge f&uuml;hrt dich zu der Burg des Sheriffs, welcher den einzigen Zugang zu deiner Position darstellt. Wenn ich du w&auml;re, w&uuml;rde ich mich beeilen. Aber wer bin ich schon, ich habe diesen Schlammassel ja nur erstellt. Jetzt ist es an dir aufzur&auml;umen! Hast du was es braucht um diese Mission zu knacken?</p>
 <p>Es k&ouml;nnte sein, dass ich ein paar strategische Kniffe herausgefunden habe, die dir weiterhelfen k&ouml;nnten. Ich bin mir sicher, die brauchst du nicht. Aber nur f&uuml;r den Fall der F&auml;lle, hier sind sie:</p>
 <details>
 <summary>Hinweis 1</summary>
-Rekrutiere sofort eine gute Anzahl an Startverteidigern, nur so kannst du dir auf lange sicht etwas Ruhe verschaffen um dich um deine Wirtschaft zu k&uuml;mmern.</details><details>
+Rekrutiere sofort eine gute Anzahl an Startverteidigern, nur so kannst du dir auf lange Sicht etwas Ruhe verschaffen um dich um deine Wirtschaft zu k&uuml;mmern.</details><details>
 <summary>Hinweis 2</summary>
 Es ist sehr billig fr&uuml;h den Korridor mit Wassergraben und Wallst&uuml;cken zu verschlie&szlig;en.</details><details>
 <summary>Hinweis 3</summary>
 Das Farmland hat mehr Platz als du denkst. Immerhin ist Brotuktion sehr lukrativ!</details><details>
 <summary>Hinweis 4</summary>
-Die Wirtschaft deiner Gegner kannst du auch von deiner Position mit ein paar gut platzierten T&uuml;rmen unter Druck setzen, so dauert die Nachrekrutierung neuer Angreifer l&auml;nger.</details><details>
+Die Wirtschaft deiner Gegner kannst du auch von deiner Position mit ein paar gut platzierten T&uuml;rmen unter Druck setzen, so dauert ihre Nachrekrutierung neuer Angreifer l&auml;nger.</details><details>
 <summary>Hinweis 5</summary>
-Die Einheiten eurer Gegner scheinen eine Schw&auml;che gegen Armbrustbolzen aufzuweisen.</details>
+Die Einheiten deiner Gegner scheinen eine Schw&auml;che gegen Armbrustbolzen aufzuweisen.</details>
 <p>Gut ger&uuml;stet marschierst du vorw&auml;rts: F&uuml;r Ruhm und Ehre! <br />Viel Gl&uuml;ck und Spa&szlig;<br />von Krarilotus</p>
