--- a/scenarios/Door03/Door03_de.html
+++ b/scenarios/Door03/Door03_de.html
@@ -1,6 +1,6 @@
 <p>Du konntest nicht widerstehen das dritte T&uuml;rchen aufzumachen... was ist das f&uuml;r ein Geruch?! Ist das etwa... unkonventionelles Kartendesign?</p>
-<p>Wenn du auf das &Uuml;bersichtsbild zur Karte klickst, kannst du es etwas n&auml;her betrachten. Etwas verhindert die Nutzung deiner Produktionsst&auml;tten. Soll das ein Witz sein? Nein! Sie wurden dir genommen! Die einzige M&ouml;glichkeit sie zur&uuml;ck zu erhalten ist es, eure Gegner einen nach dem anderen auszuschalten. Aber falls du zu lange wartest, k&ouml;nnten diese eure unzureichenden M&ouml;glichkeiten eine Armee zu rekrutieren nutzen und euch &uuml;berw&auml;ltigen. Die fehlenden Waffen sind das eine Problem, doch k&ouml;nnt ihr auch keine S&ouml;ldner anheuern und eure Baumeister sind ebenfalls mit euren Handwerkern gefangen genommen worden.</p>
-<p>Nat&uuml;rlich gibt es wie immer ein paar Tipps, damit du nicht zu frustriert bist, falls ihr die Karte nicht sofort schaffst.</p>
+<p>Wenn du auf das &Uuml;bersichtsbild zur Karte klickst, kannst du es etwas n&auml;her betrachten. Etwas verhindert die Nutzung deiner Produktionsst&auml;tten. Soll das ein Witz sein? Nein! Sie wurden dir genommen! Deine einzige M&ouml;glichkeit sie zur&uuml;ck zu erhalten besteht darin deine Gegner einen nach dem anderen auszuschalten. Aber falls du zu lange wartest, k&ouml;nnten diese deine unzureichenden M&ouml;glichkeiten eine Armee zu rekrutieren nutzen um dich zu &uuml;berw&auml;ltigen. Die fehlenden Waffen sind das eine Problem, doch kannst du auch keine S&ouml;ldner anheuern und deine Baumeister sind ebenfalls mit deinen Handwerkern gefangen genommen worden.</p>
+<p>Nat&uuml;rlich gibt es wie immer ein paar Tipps, damit du nicht zu frustriert bist, falls du die Karte nicht sofort schaffst:</p>
 <details>
 <summary>Hinweis 1</summary>
 Spare dir deine Baumeister bis zum Schluss, so hast du eine besser Chance die Burg des Wolfs zu zerm&uuml;rben.</details><details>
@@ -9,9 +9,9 @@ Die Schlange zu t&ouml;ten gibt dir Zugriff auf Armbrustsch&uuml;tzen. Diese wer
 <summary>Hinweis 3</summary>
 Pfeilmachereien anzuh&auml;ufen ist eine legitime Strategie das fr&uuml;here Spiel zu dominieren. Allerdings rate ich dir sie sp&auml;ter f&uuml;r eine bessere Armeekomposition zur&uuml;ckzubauen.</details><details>
 <summary>Hinweis 4</summary>
-W&auml;hrend der Belagerung des Wolfes, empfiehlt es sich mit Rittern systematisch seine &auml;u&szlig;ere Wirtschaft zu zerst&ouml;ren. Greift ihn danach erst an, nachdem er seine Hauptstreitmacht in eurer Verteidigung versenkt hat.</details><details>
+W&auml;hrend der Belagerung des Wolfes, empfiehlt es sich mit Rittern systematisch seine &auml;u&szlig;ere Wirtschaft zu zerst&ouml;ren. Greife ihn danach erst an, nachdem er seine Hauptstreitmacht in deiner Verteidigung versenkt hat.</details><details>
 <summary>Hinweis 5</summary>
-Z&ouml;gert nicht zu lange mit dem Angriff auf die n&auml;chste KI, sonst werden die Angriffe der &uuml;brigen immer st&auml;rker!</details><details>
+Z&ouml;gere nicht zu lange mit dem Angriff auf die n&auml;chste KI, sonst werden die Angriffe der &uuml;brigen immer st&auml;rker!</details><details>
 <summary>Hinweis 6</summary>
 M&ouml;nche k&ouml;nnen effiziente Truppen zu Beginn darstellen, jedoch sind sie im sp&auml;teren Spielverlauf den anderen verf&uuml;gbaren Optionen stark unterlegen. Ich empfehle die Reihenfolge der freizuschaltenden Truppentypen wie folgt: Speerk&auml;mpfer -&gt; Armbrustsch&uuml;tzen -&gt; Streitkolbenk&auml;mpfer/Pikeniere -&gt; Schwertk&auml;mpfer &amp; Ritter.</details>
-<p>Einen Ratschlag gebe ich dir sofort: Deinen Spielfortschritt regelm&auml;&szlig;ig zu speichern wird dir auf Dauer Zeit ersparen. Dies ist f&uuml;r alle Karten von nun an n&uuml;tzlich, da diese nur schwieriger werden auf die eine oder andere Art.<br />Eure Handwerker brauchen dich! Also worauf wartest, viel Spa&szlig;.<br />von Krarilotus</p>
+<p>Einen Ratschlag gebe ich dir sofort: Deinen Spielfortschritt regelm&auml;&szlig;ig zu speichern wird dir auf Dauer Zeit ersparen. Dies ist f&uuml;r alle Karten von nun an n&uuml;tzlich, da diese nur schwieriger werden auf die eine oder andere Art.<br />Deine Handwerker brauchen dich! Also worauf wartest du?! Viel Spa&szlig;.<br />von Krarilotus</p>
