--- a/scenarios/Door06/Door06_de.html
+++ b/scenarios/Door06/Door06_de.html
@@ -26,7 +26,7 @@ Der Wolf wird mit einer riesigen Armee und einer gro&szlig;en Schar Ritter zum &
 <p>Einige weitere Hinweise im Detail folgen, vielleicht sind sie hilfreich, vielleicht auch nicht:</p>
 <details>
 <summary>Hinweis Detail 1</summary>
-Du kannst mit Assassinen die Torh&auml;user des Wolfes nutze num deine Truppen auf seine Strukturen zu bringen. Es gibt allerdings viele M&ouml;glichkeiten seine Burg zu belagern, setze deiner Kreativit&auml;t keine Grenzen!</details><details>
+Du kannst mit Assassinen die Torh&auml;user des Wolfes nutze um deine Truppen auf seine Strukturen zu bringen. Es gibt allerdings viele M&ouml;glichkeiten seine Burg zu belagern, setze deiner Kreativit&auml;t keine Grenzen!</details><details>
 <summary>Hinweis Detail 2</summary>
 Falls du es schaffst den Lord der Ratte nicht anzufassen w&auml;hrend du trotzdem seine Wirtschaft lahm legst, wirst du durch die extra Ressourcen die dir zur Verf&uuml;gung stehen einen deutlich einfacheren Start haben.</details><details>
 <summary>Hinweis Detail 3</summary>
