--- a/scenarios/Door10/Door10_de.html
+++ b/scenarios/Door10/Door10_de.html
@@ -1,4 +1,5 @@
-<p>Die Karte hinter dem 10. T&uuml;rchen des Kalenders ist eine etwas kleinere. Es ist ebenso die erste Karte, die ich je f&uuml;r dieses Projekt erstellt habe. In dieser Karte wirst du wirklich vielen Technologien beraubt. Allen zu denen dein Verb&uuml;ndeter, die Ratte, auch keinen Zugriff hat.<br />Zusammen steht ihr gegen einen m&auml;chtigen L&ouml;wen: Richard auf dem Berg im Nordosten. Seine Vorr&auml;te gehen so schnell nicht zuneige, er hat sehr viele Nahrungsmittel hinter seiner Burg, die er Tagein-Tagaus zu sich nimmt. Das meiste Farmland befindet sich aber in den L&auml;ndereien von Duc De Puce.Au&szlig;erdem konntest du zwei Steinbr&uuml;che errichten und hast auch Zugang zu ein paar sp&auml;rlichen B&auml;umen entlang der K&uuml;ste f&uuml;r die Holzvorr&auml;te um deine Waffenproduktionen zu befeuern.</p>
+<p>Die Karte hinter dem 10. T&uuml;rchen des Kalenders ist eine etwas kleinere. Es ist ebenso die erste Karte, die ich je f&uuml;r dieses Projekt erstellt habe. In dieser Karte wirst du wirklich vielen Technologien beraubt. Allen zu denen dein Verb&uuml;ndeter, die Ratte, auch keinen Zugriff hat.</p>
+<p>Zusammen steht ihr gegen einen m&auml;chtigen L&ouml;wen: Richard auf dem Berg im Nordosten. Seine Vorr&auml;te gehen so schnell nicht zur Neige, er hat sehr viele Nahrungsmittel hinter seiner Burg, die er Tagein-Tagaus zu sich nimmt. Das meiste Farmland befindet sich aber in den L&auml;ndereien von Duc De Puce. Au&szlig;erdem konntest du zwei Steinbr&uuml;che errichten und hast auch Zugang zu ein paar sp&auml;rlichen B&auml;umen entlang der K&uuml;ste f&uuml;r die Holzvorr&auml;te um deine Waffenproduktionen zu befeuern.</p>
 <p>Vielleicht wirst du scheitern, scheitern und wieder scheitern. Deshalb habe ich wie immer ein paar kleine Hinweise zusammengetragen:</p>
 <details>
 <summary>Hinweis 1</summary>
@@ -11,4 +12,4 @@ Du wirst deinen Kornspeicher neben die Farmen stellen wollen, damit du diese bes
 Steuern mit extra oder doppelten Rationen lohnen sich wirklich!</details><details>
 <summary>Hinweis 5</summary>
 Den H&uuml;gel hinauf anzugreifen gibt dir einen gro&szlig;en Nachteil. Stelle sicher dass du genug Bogensch&uuml;tzen hast um Richards Burg komplett zu umzingeln.</details>
-<p>Viel Spa&szlig; und Gl&uuml;ck! Hoffentlich f&auml;llt dir die Karte nicht zu leicht, daf&uuml;r dass es cshon das 10. T&uuml;rchen ist ^^<br />von Krarilotus</p>
+<p>Viel Spa&szlig; und Gl&uuml;ck! Hoffentlich f&auml;llt dir die Karte nicht zu leicht, daf&uuml;r dass es schon das 10. T&uuml;rchen ist ^^<br />von Krarilotus</p>
