correct some fails in door11

--- a/scenarios/Door11/Door11_en.html
+++ b/scenarios/Door11/Door11_en.html
@@ -1,22 +1,21 @@
-<p>Ungl&auml;ubige! All diese Tiere hinter dem 11. T&uuml;rchen sind hier um deinen Bergfried zu erobern. Wie du bestimmt mitbekommen hast, hast du den Vorteil des H&uuml;gels f&uuml;r die Defensive auf deiner Seite und eine gesunde Wirtschaft bereits am Laufen!</p>
-<p>Die herausforderung wird sein, deine Wirtschaft auszubauen und trotzdem noch gen&uuml;gend Ressourcen f&uuml;r die VErteidigung &uuml;brig zu lassen. Bald werden dich die zwei Schweine belagern, aber zun&auml;chst musst du dich um Ratte und Schlange k&uuml;mmern. Immerhin hat das land einiges zu bieten. Vier Fl&uuml;sse bieten reiches fruchbares Farmland...</p>
-<p>Falls du ihre Armeen au&szlig;er Sichtweite deiner Burgw&auml;lle verscheuchen willst, bedenke: Sie sind schwache Ungl&auml;ubige! Deine Truppen werden Sie in die Knie zwingen, wenn nicht allein dann mit diesen Hinweisen:</p>
+<p>Infidels! All these animals behind door 11 came to take your keep from you. As you might have noticed, you are on a little hill, taking the advantageous position to defend against all of them, while maintaining a healthy economy.</p>
+<p>As it turns out, your castle is already set up in this scenario. You will be challenged with the task to defend it and expand it when necessary. You will soon notice, that both Pigs in the bottom left and the upper right corner are your main threats. The Snake and the Rat are also pressing against your castle walls, using less armoured troops. The land has a lot to offer with four rivers fertilizing most of it originating from your little mountain.</p>
+<p>If you want to remove their army from sight of your castle walls, at once.... Of course, they are weak infidels! Your forces will ultimately bring them to their knees, with these hints:</p>
 <details>
-<summary>Hinweis 1</summary>
-Um dich gegen Belagerungsger&auml;te behaupten zu k&ouml;nnen, werden zwei gro&szlig;e Quadratische T&uuml;rme mit Ballisten gut den Job erledigen.</details><details>
-<summary>Hinweis 2</summary>
-Erinnerst du dich an T&uuml;rchen 4? Schicke nur eine aureichende Menge von Fernk&auml;mpfern auf einmal nach vorn, die sich selbst verteidigen k&ouml;nnen.</details><details>
-<summary>Hinweis 3</summary>
-4 Eisenminen und 2 Stienbr&uuml;che passen auf dein Plateau. Das Eisen weiterzuverarbeiten wirft h&ouml;here Profite ab.</details><details>
-<summary>Hinweis 4</summary>
-Du kannst 3 Weizenfarmen auf das Farmland links platzieren, nachdem die B&auml;ume gef&auml;llt wurden.</details><details>
-<summary>Hinweis 5</summary>
-Du startest mit positiver Beliebtheit, welche du durch 2 Schenken sehr leicht noch weiter erh&ouml;hen kannst.</details><details>
-<summary>Hinweis 6</summary>
-T&ouml;test du die Ratte fr&uuml;h, mit ein paar gepanzerten Einheiten, hast du sofort Zugriff auf die Ressourcen auf ihrer Seite.</details><details>
-<summary>Hinweis 7</summary>
-W&auml;lle sind nur von Nutzen, wenn du sie auch repariert bekommst.</details><details>
-<summary>Hinweis 8</summary>
-Pech und M&ouml;rderl&ouml;cher sind wirklich unterbewertet! (Und billig...)
-<p>Viel Spa&szlig; und viel Erfolg!<br />von Krarilotus</p>
-</details>
+<summary>Hint 1</summary>
+To defend against siege engines, a big square tower on each corner between snake and both pigs will be able to deal with most of them, using tower ballistae.</details><details>
+<summary>Hint 2</summary>
+Remember Door4? Getting that critical mass of archers and crossbowmen before sending them out for defense is crucial to keep them alive.</details><details>
+<summary>Hint 3</summary>
+A total of 4 iron mines, 2 stone quarries can fit on your plateau. Processing the iron further will yield higher profits.</details><details>
+<summary>Hint 4</summary>
+You can fit 3 wheat farms on the left top farm spot after cutting down the trees.</details><details>
+<summary>Hint 5</summary>
+You will start with a net positive popularity, which you can increase further for taxation by adding<br />one or two more inns.</details><details>
+<summary>Hint 6</summary>
+When you have enough armoured units, you can storm the Rat and expand a bit outside in his direction. He also might stack up some gold, so killing him first will provide you with a nice reward.</details><details>
+<summary>Hint 7</summary>
+Walls are only good if you can maintain their upkeep costs.</details><details>
+<summary>Hint 8</summary>
+For melee troops there are other defense mechanics besides shooting them in the face, like killing pits or pitch.</details>
+<p>Have fun and some luck, if you need it.<br />by Krarilotus</p>
