--- a/scenarios/Door11/Door11_de.html
+++ b/scenarios/Door11/Door11_de.html
@@ -1,15 +1,22 @@
-<p>Die Karte hinter dem 10. T&uuml;rchen des Kalenders ist eine etwas kleinere. Es ist ebenso die erste Karte, die ich je f&uuml;r dieses Projekt erstellt habe. In dieser Karte wirst du wirklich vielen Technologien beraubt. Allen zu denen dein Verb&uuml;ndeter, die Ratte, auch keinen Zugriff hat.</p>
-<p>Zusammen steht ihr gegen einen m&auml;chtigen L&ouml;wen: Richard auf dem Berg im Nordosten. Seine Vorr&auml;te gehen so schnell nicht zur Neige, er hat sehr viele Nahrungsmittel hinter seiner Burg, die er Tagein-Tagaus zu sich nimmt. Das meiste Farmland befindet sich aber in den L&auml;ndereien von Duc De Puce. Au&szlig;erdem konntest du zwei Steinbr&uuml;che errichten und hast auch Zugang zu ein paar sp&auml;rlichen B&auml;umen entlang der K&uuml;ste f&uuml;r die Holzvorr&auml;te um deine Waffenproduktionen zu befeuern.</p>
-<p>Vielleicht wirst du scheitern, scheitern und wieder scheitern. Deshalb habe ich wie immer ein paar kleine Hinweise zusammengetragen:</p>
+<p>Ungl&auml;ubige! All diese Tiere hinter dem 11. T&uuml;rchen sind hier um deinen Bergfried zu erobern. Wie du bestimmt mitbekommen hast, hast du den Vorteil des H&uuml;gels f&uuml;r die Defensive auf deiner Seite und eine gesunde Wirtschaft bereits am Laufen!</p>
+<p>Die herausforderung wird sein, deine Wirtschaft auszubauen und trotzdem noch gen&uuml;gend Ressourcen f&uuml;r die VErteidigung &uuml;brig zu lassen. Bald werden dich die zwei Schweine belagern, aber zun&auml;chst musst du dich um Ratte und Schlange k&uuml;mmern. Immerhin hat das land einiges zu bieten. Vier Fl&uuml;sse bieten reiches fruchbares Farmland...</p>
+<p>Falls du ihre Armeen au&szlig;er Sichtweite deiner Burgw&auml;lle verscheuchen willst, bedenke: Sie sind schwache Ungl&auml;ubige! Deine Truppen werden Sie in die Knie zwingen, wenn nicht allein dann mit diesen Hinweisen:</p>
 <details>
 <summary>Hinweis 1</summary>
-Solange die Ratte am Leben ist, wird Richard sich auf sie fokussieren. Sie mit Steroiden zu f&uuml;ttern wird aber nichts bringen, sie braucht deine echte Unterst&uuml;tzung!</details><details>
+Um dich gegen Belagerungsger&auml;te behaupten zu k&ouml;nnen, werden zwei gro&szlig;e Quadratische T&uuml;rme mit Ballisten gut den Job erledigen.</details><details>
 <summary>Hinweis 2</summary>
-Einiges deines Verm&ouml;gens direkt in Waffen zu investieren wird dir helfen den ersten Angriff von Richard abzuwehren!</details><details>
+Erinnerst du dich an T&uuml;rchen 4? Schicke nur eine aureichende Menge von Fernk&auml;mpfern auf einmal nach vorn, die sich selbst verteidigen k&ouml;nnen.</details><details>
 <summary>Hinweis 3</summary>
-Du wirst deinen Kornspeicher neben die Farmen stellen wollen, damit du diese besser nutzen kannst. Au&szlig;erdem kannst du die Jahreszeiten der Farmen alternieren, sodass immer Erntezeit ist.</details><details>
+4 Eisenminen und 2 Stienbr&uuml;che passen auf dein Plateau. Das Eisen weiterzuverarbeiten wirft h&ouml;here Profite ab.</details><details>
 <summary>Hinweis 4</summary>
-Steuern mit extra oder doppelten Rationen lohnen sich wirklich!</details><details>
+Du kannst 3 Weizenfarmen auf das Farmland links platzieren, nachdem die B&auml;ume gef&auml;llt wurden.</details><details>
 <summary>Hinweis 5</summary>
-Den H&uuml;gel hinauf anzugreifen gibt dir einen gro&szlig;en Nachteil. Stelle sicher dass du genug Bogensch&uuml;tzen hast um Richards Burg komplett zu umzingeln.</details>
-<p>Viel Spa&szlig; und Gl&uuml;ck! Hoffentlich f&auml;llt dir die Karte nicht zu leicht, daf&uuml;r dass es schon das 10. T&uuml;rchen ist ^^<br />von Krarilotus</p>
+Du startest mit positiver Beliebtheit, welche du durch 2 Schenken sehr leicht noch weiter erh&ouml;hen kannst.</details><details>
+<summary>Hinweis 6</summary>
+T&ouml;test du die Ratte fr&uuml;h, mit ein paar gepanzerten Einheiten, hast du sofort Zugriff auf die Ressourcen auf ihrer Seite.</details><details>
+<summary>Hinweis 7</summary>
+W&auml;lle sind nur von Nutzen, wenn du sie auch repariert bekommst.</details><details>
+<summary>Hinweis 8</summary>
+Pech und M&ouml;rderl&ouml;cher sind wirklich unterbewertet! (Und billig...)
+<p>Viel Spa&szlig; und viel Erfolg!<br />von Krarilotus</p>
+</details>
